chore: rename repo to pact-foundation/homebrew-tap

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,16 +35,16 @@ jobs:
       - name: Install tap
         if: matrix.os != 'macos-15'
         run: |
-          brew tap pact-foundation/pact-standalone
-          cd $(brew --prefix)/Homebrew/Library/Taps/pact-foundation/homebrew-pact-standalone/
+          brew tap pact-foundation/tap
+          cd $(brew --prefix)/Homebrew/Library/Taps/pact-foundation/homebrew-tap/
           git checkout ${{ github.event.pull_request.head.sha || github.sha }}
           brew install --verbose --debug pact pact-stub-server pact-plugin pact-mock-server pact-verifier pact-broker-client pact-legacy
 
       - name: Install tap
         if: matrix.os == 'macos-15'
         run: |
-          brew tap pact-foundation/pact-standalone
-          cd $(brew --prefix)/Library/Taps/pact-foundation/homebrew-pact-standalone/
+          brew tap pact-foundation/tap
+          cd $(brew --prefix)/Library/Taps/pact-foundation/homebrew-tap/
           git checkout ${{ github.event.pull_request.head.sha || github.sha }}
           brew install --verbose --debug pact pact-stub-server pact-plugin pact-mock-server pact-verifier pact-broker-client pact-legacy
 
